updated music iq biblio

--- a/document/02-individual-parameters.Rmd
+++ b/document/02-individual-parameters.Rmd
@@ -71,11 +71,11 @@ Seeing as melodic dictators need to notate their melodies, which again is depend
 
 While the above memory for melodies literature is mixed regarding the musician's advantage, there is research from cognitive psychology to support that musicans do in fact have better cognitive abilities on a more domain general level, which could lead ot better performance.
 Work as reviewed in @schellenbergMusicNonmusicalAbilities2017 investigating the relationship between musical training and general intelligence suggest that both children and adults who engage in musical activity tend to score higher on general measurses of intelligence than their non-musical peers (Gibson, Folley and Park, 2009; Hille et al., 2011; Schellenberg, 2011a; Schellenberg and Mankarious, 2012).
-The finding importantly comes with it a correlation between duration of musical training and the extent of the increases in intelligence (Degé, Kubicek and Schwarzer, 2011a; Degé, Wehrum, Stark and Schwarzer, 2015; Corrigall and Schellenberg, 2015; Corrigall, Schellenberg and Misura, 2013; Schellenberg, 2006).
+The finding importantly comes with it a correlation between duration of musical training and the extent of the increases in intelligence (Degé, Kubicek and Schwarzer!!!!!, 2011a; Degé, Wehrum, Stark and Schwarzer, 2015; Corrigall and Schellenberg, 2015; Corrigall, Schellenberg and Misura, 2013; Schellenberg, 2006).
 While many of these studies are correlational, other researchers have further investigated this relationship in experimental settings in attempt to control for confounding variables like socio-economic status and parental involvment in out of school activities (Corrigall et al., 2013; Degé et al., 2011a; Schellenberg, 2006, 2011a, 2011b; Schellenberg and Mankarious, 2012), but findings have been mixed.
 
 Schellenberg [@schellenbergMusicNonmusicalAbilities2017] notes that in many of these studies there is a problem of too small of a sample size in his review (Corrigall and Trainor, 2011; Parbery-Clark et al., 2011; Strait, Parbery-Clark, Hittner and Kraus, 2012) in that studies that are typically smaller do not reach statistical significance. 
-Also referenced in Schellenberg's review is evidence that when professional musicians are matched with non-musicians from the general population these associations are NON EXISTANT (CITE). 
+Also referenced in Schellenberg's review is evidence that when professional musicians are matched with non-musicians from the general population these associations are NON EXISTANT (CITE SEE SCHELL 2015). 
 Interpreting the current literature Schellenberg's puts forward the hypothesis that higher functioning kids self-select into music lessons and they tend to stay in lessons longer which leads to the observed differences in intelligence. 
 Additionally, Schellenberg remains skeptical of any sorts of causal factors regarding increases in IQ (e.g., François et al., 2013; Moreno et al., 2009) noting methodlogical problems like how short exposure times were in studies claiming increases in effects or researchers who not holding pre-exisiting cognitive abilitis constant (Mehr, Schachner, Katz and Spelke, 2013).
 
