--- a/document/book.bib
+++ b/document/book.bib
@@ -3792,4 +3792,60 @@ On the basis of instrument-specific~}
   file = {/Users/davidjohnbaker/Zotero/storage/47GMWGJA/Schellenberg - 2015 - Music training and speech perception a gene-envir.pdf}
 }
 
+@article{bestMusicCurriculaFuture1992,
+  title = {Music {{Curricula}} in the {{Future}}},
+  volume = {94},
+  issn = {1063-2913, 1940-4395},
+  doi = {10.1080/10632913.1992.9936901},
+  language = {en},
+  number = {2},
+  journal = {Arts Education Policy Review},
+  author = {Best, Harold M.},
+  month = dec,
+  year = {1992},
+  pages = {2-7}
+}
+
+@article{levitinWhatDoesIt2012a,
+  title = {What {{Does It Mean}} to {{Be Musical}}?},
+  volume = {73},
+  issn = {08966273},
+  doi = {10.1016/j.neuron.2012.01.017},
+  language = {en},
+  number = {4},
+  journal = {Neuron},
+  author = {Levitin, Daniel J.},
+  month = feb,
+  year = {2012},
+  pages = {633-637}
+}
+
+@article{bakerExaminingMusicalSophistication2018,
+  title = {Examining Musical Sophistication: {{A}} Replication and Theoretical Commentary on the {{Goldsmiths Musical Sophistication Index}}},
+  issn = {1029-8649, 2045-4147},
+  shorttitle = {Examining Musical Sophistication},
+  doi = {10.1177/1029864918811879},
+  language = {en},
+  journal = {Musicae Scientiae},
+  author = {Baker, David John and Ventura, Juan and Calamia, Matthew and Shanahan, Daniel and Elliott, Emily M.},
+  month = nov,
+  year = {2018},
+  pages = {102986491881187}
+}
+
+@article{peretzNatureMusicBiological2006a,
+  title = {The Nature of Music from a Biological Perspective},
+  volume = {100},
+  issn = {00100277},
+  doi = {10.1016/j.cognition.2005.11.004},
+  language = {en},
+  number = {1},
+  journal = {Cognition},
+  author = {Peretz, Isabelle},
+  month = may,
+  year = {2006},
+  pages = {1-32},
+  file = {/Users/davidjohnbaker/Zotero/storage/MY67ULQS/Peretz - 2006 - The nature of music from a biological perspective.pdf}
+}
+
 
