chpt 2 draft lit review done

--- a/document/book.bib
+++ b/document/book.bib
@@ -3848,4 +3848,89 @@ On the basis of instrument-specific~}
   file = {/Users/davidjohnbaker/Zotero/storage/MY67ULQS/Peretz - 2006 - The nature of music from a biological perspective.pdf}
 }
 
+@article{demorestLostTranslationEnculturation2008,
+  title = {Lost in {{Translation}}: {{An Enculturation Effect}} in {{Music Memory Performance}}},
+  volume = {25},
+  issn = {07307829, 15338312},
+  shorttitle = {Lost in {{Translation}}},
+  doi = {10.1525/mp.2008.25.3.213},
+  language = {en},
+  number = {3},
+  journal = {Music Perception: An Interdisciplinary Journal},
+  author = {Demorest, Steven M. and Morrison, Steven J. and Jungbluth, Denise and Beken, M\"unir N.},
+  month = feb,
+  year = {2008},
+  pages = {213-223},
+  file = {/Users/davidjohnbaker/Zotero/storage/6C5WBPD6/Demorest et al. - 2008 - Lost in Translation An Enculturation Effect in Mu.pdf}
+}
+
+@article{halpernAgingExperienceRecognition1995,
+  title = {Aging and {{Experience}} in the {{Recognition}} of {{Musical Transpositions}}},
+  volume = {10},
+  number = {3},
+  journal = {Psychology and Aging},
+  author = {Halpern, Andrea and Bartlett, James and Dowling, W.Jay},
+  year = {1995},
+  pages = {325-342},
+  file = {/Users/davidjohnbaker/Zotero/storage/RDBFABNF/halpernBartlettDowling1995.pdf}
+}
+
+@book{ritchieIntelligenceAllThat2015a,
+  address = {London},
+  title = {Intelligence: All That Matters},
+  isbn = {978-1-4447-9187-7 978-1-4447-9180-8 978-1-4447-9179-2},
+  shorttitle = {Intelligence},
+  language = {eng},
+  publisher = {{Hodder \& Stoughton}},
+  author = {Ritchie, Stuart},
+  year = {2015},
+  note = {OCLC: 945755369},
+  annote = {Introducing intelligence -- Testing intelligence -- Why intelligence matters -- The biology of intelligence -- The easy way to raise your IQ -- Why is intelligence so controversial? -- 100 ideas
+
+Literaturverzeichnis: Seite 131-140}
+}
+
+@book{beaujeanLatentVariableModeling2014,
+  address = {New York},
+  title = {Latent Variable Modeling Using {{R}}: A Step by Step Guide},
+  isbn = {978-1-84872-699-4 978-1-84872-698-7},
+  lccn = {QA278.6 .B43 2014},
+  shorttitle = {Latent Variable Modeling Using {{R}}},
+  publisher = {{Routledge/Taylor \& Francis Group}},
+  author = {Beaujean, A. Alexander},
+  year = {2014},
+  keywords = {R (Computer program language),Latent structure analysis,Latent variables},
+  note = {OCLC: ocn868199963}
+}
+
+@article{wrightMethodPathCoefficents1934,
+  title = {The Method of Path Coefficents},
+  volume = {5},
+  number = {3},
+  journal = {The Annals of Mathematical Statistics},
+  author = {Wright, Sewall},
+  year = {1934},
+  pages = {161-215},
+  file = {/Users/davidjohnbaker/Zotero/storage/MYBX6DNY/wrightPATH.pdf}
+}
+
+@book{zotero-705,
+  type = {Book}
+}
+
+@book{pearlBookWhyNew2018,
+  address = {New York},
+  edition = {First edition},
+  title = {The Book of Why: The New Science of Cause and Effect},
+  isbn = {978-0-465-09760-9},
+  lccn = {Q175.32.C38 P43 2018},
+  shorttitle = {The Book of Why},
+  abstract = {"Everyone has heard the claim, "Correlation does not imply causation." What might sound like a reasonable dictum metastasized in the twentieth century into one of science's biggest obstacles, as a legion of researchers became unwilling to make the claim that one thing could cause another. Even two decades ago, asking a statistician a question like "Was it the aspirin that stopped my headache?" would have been like asking if he believed in voodoo, or at best a topic for conversation at a cocktail party rather than a legitimate target of scientific inquiry. Scientists were allowed to posit only that the probability that one thing was associated with another. This all changed with Judea Pearl, whose work on causality was not just a victory for common sense, but a revolution in the study of the world"--},
+  publisher = {{Basic Books}},
+  author = {Pearl, Judea and Mackenzie, Dana},
+  year = {2018},
+  keywords = {Causation,Inference},
+  annote = {The ladder of causation -- From buccaneers to guinea pigs: the genesis of causal inference -- From evidence to causes: Reverend Bayes meets Mr. Holmes -- Confounding and deconfounding: or, slaying the lurking variable -- The smoke-filled debate: clearing the air -- Paradoxes galore! -- Beyond adjustment: the conquest of Mt. Intervention -- Counterfactuals: mining worlds that could have been -- Mediation: the search for a mechanism -- Big data, artificial intelligence, and the big questions}
+}
+
 
