--- a/document/02-individual-parameters.Rmd
+++ b/document/02-individual-parameters.Rmd
@@ -47,23 +47,24 @@ Further, Timothy Chenette has since proposed similar types of progressive loadin
 After students master the ability to selectively hear and retain portion of a melody, the other way in which they can improve their dictation abilities is via chunking.
 Chunking is a listener's ability group smaller units of musical material into a larger group.
 The idea of chunking derives from earlier work from Gestalt psychologists and was one of the initial mechanisms proposed by @millerMagicalNumberSeven1956 able to extend the finite window of memory.
-The general idea is that if a collection of notes can be identified as its own discrete entity, such as a descending triad, the listener will only have to remember that one structure, rather than its component parts.
+The general idea is that if a collection of notes can be identified as its own discrete entity-- such as a descending major triad in first inversion-- the listener will only have to remember that one structure, rather than its component parts.
 As discussed in the previous chapter in §XXX, music's inherently sequential nature affords it many opportunities to find repeated patterns which can be labeled, musically understood, and thus chunked.
 While stimuli that are inherently sequential are problematic for researchers working in the working memory literature, students are expected to use chunking to their advantage in order to become more adept listeners.
 As students learn to chunk more efficiently, they are able to process more musical information into their short-term musical memory.
 With the development of both skills, students are presumed to increase their musical memory and ultimately improve their melodic dictation abilities.
-But what evidence supports the assertion that individuals are able to improve on their ability to remember melodies?
-To help answer this, I first begin by reviewing literature that examines memory for melody that does not depend on an individual's musical training.
+But what evidence supports the assertion that individuals are able to improve on their ability to both learn and remember melodies?
 
 ### Memory for Melodies
 
 Research findings from the memory for melody literature are mixed when considering how people vary in their ability to remember musical material [@halpernMemoryMelodies2010].
 For example, no effect of an individual's musical training was found by @mcauleyPlayItAgain2004 in a paradigm where both musically trained and non-musically trained individuals were presented with melodies using a recognition paradigm task with melodies over the course of two days.
-In a musical recognition task, @korenmanRoleFamiliarityEpisodic2004 found no effect of musicianship on memory and using an old-new design and @munganLevelsofProcessingEffectsRemember2011 found an effect of musical training on melodic memory, but the significant effect reported was not found in correctly identifying melodies, but rather in correctly identifying songs that they had not heard before.
-Additionally, [@mullensiefenRoleFeaturesContext2014] reported no effects of musical training on their recognition paradigm experiement.
-They instead predicted musical performance based on the features of the melodies rather than using individual level variables. 
+In a musical recognition task, @korenmanRoleFamiliarityEpisodic2004 found no effect of musicianship on memory.
+Using a recognition paradigm, @munganLevelsofProcessingEffectsRemember2011 found an effect of musical training on melodic memory, but the significant effect reported was not found in correctly identifying melodies, but rather in correctly identifying songs that they had not heard before.
+[@mullensiefenRoleFeaturesContext2014] reported no effects of musical training on their recognition paradigm experiement but importantly did not include any expert participants in their sample and the focus of this particular study was to look at structural features of the melody, rather than individual level features.
+Additionally, other stduies have also found that musical expertise is not a sucessful predictor of melodic recognition [@demorestLostTranslationEnculturation2008; @halpernAgingExperienceRecognition1995]. 
 
 As with much of the music psychology literature, one of the reasons that these studies may have not found a memory advantage for the more musically trained is that how musical training is measured varies widely from study to study [@talaminiMusiciansHaveBetter2017].
+This inability to measure musical exposure additionally complicates controling for the amount of variability of what might drive the memory effects in the models.
 When measured continuously using paradigms that require immediate recall and judgment, musical training does often predict memory for musical materials.
 Using a stepwise modeling procedure, @harrisonModellingMelodicDiscrimination2016 consitently found evidence that musical training to be a significant predictor of ability to preform well on a melodic discrimintation task when developing an item response theory based test of melodic memory. 
 Using regression modeling, Harrison et. al reported to be able to explain a large amont of the variance ($R^2 = 0.459$) when reporting response variability in a melodic discrimination task [@harrisonApplyingModernPsychometric2017a] when measuring musical training via the Goldsmith's Musical Sophistication Index[@mullensiefenMusicalityNonMusiciansIndex2014].
@@ -75,9 +76,10 @@ Seeing as melodic dictators need to notate their melodies, which again is depend
 
 ### Musician's Cognitive Advantage
 
-While the above memory for melodies literature is mixed regarding the musician's advantage, there is research from cognitive psychology to support that musicians do in fact have better cognitive abilities on a more domain general level, which could lead to better performance.
+While the above memory for melodies literature is mixed regarding the musician's advantage, there is research from cognitive psychology to support the latter evidence of an advantage of musical training.
+Some researchers suggest that musicians have better cognitive abilities on a more domain general level, which could lead to better performance and explain differences in performance.
 Work as reviewed in @schellenbergMusicNonmusicalAbilities2017 investigating the relationship between musical training and general intelligence suggest that both children and adults who engage in musical activity tend to score higher on general measures of intelligence than their non-musical peers [@gibsonEnhancedDivergentThinking2009; @hilleAssociationsMusicEducation2011; @schellenbergExaminingAssociationMusic2011; @schellenbergMusicTrainingEmotion2012].
-The finding importantly comes with it a correlation between duration of musical training and the extent of the increases in intelligence [@corrigallMusicTrainingCognition2013; @corrigallPredictingWhoTakes2015; @degeMusicLessonsIntelligence2011; @schellenbergLongtermPositiveAssociations2006].
+The finding importantly comes with a correlation between duration of musical training and the extent of the increases in intelligence [@corrigallMusicTrainingCognition2013; @corrigallPredictingWhoTakes2015; @degeMusicLessonsIntelligence2011; @schellenbergLongtermPositiveAssociations2006].
 While many of these studies are correlational, other researchers have further investigated this relationship in experimental settings in attempt to control for confounding variables like socio-economic status and parental involvement in out of school activities [@corrigallMusicTrainingCognition2013c; @degeMusicLessonsIntelligence2011; @schellenbergExaminingAssociationMusic2011; @schellenbergLongtermPositiveAssociations2006; @schellenbergMusicTrainingEmotion2012], but findings have been mixed.
 
 Schellenberg [@schellenbergMusicNonmusicalAbilities2017] notes that in many of these studies there is a problem of too small of a sample size in his review [@corrigallAssociationsLengthMusic2011; @parbery-clarkMusicalExperienceAging2011; @straitMusicalTrainingEarly2012] in that studies that are typically smaller do not reach statistical significance. 
@@ -85,18 +87,17 @@ Also referenced in Schellenberg's review is evidence that when professional musi
 Interpreting the current literature Schellenberg's puts forward the hypothesis that higher functioning kids self-select into music lessons and they tend to stay in lessons longer which leads to the observed differences in intelligence. 
 Additionally, Schellenberg remains skeptical of any sorts of causal factors regarding increases in IQ [@francoisMusicTrainingDevelopment2013; @morenoMusicalTrainingInfluences2009] noting methodological problems like how short exposure times were in studies claiming increases in effects or researchers who not holding pre-existing cognitive abilities constant [@mehrTwoRandomizedTrials2013].
 
-Another cognitive ability where musicians tend to be superior is that of memory.
+In addition to general intelligence, another cognitive ability where musicians tend to exhbit superior performance is that of memory.
 @talaminiMusiciansHaveBetter2017's meta-analysis investigating musical training and memory found not only a general advantage of musicians, but noted that musicians tended to perform better on memory tasks especially in cases where stimuli were short and tonal.
-This musician advantage could derive from a musician's ability to chunk information more effectively based on past exposure via implicit learning practices [@ettlingerImplicitMemoryMusic2011; @rohrmeierImplicitLearningAcquisition2012]
+This musician advantage could derive from a musician's ability to chunk information more effectively based on past exposure via implicit learning practices [@ettlingerImplicitMemoryMusic2011; @rohrmeierImplicitLearningAcquisition2012].
+This difference also might reflect the above mentioned self-selection of higher functioning individuals to partake in music, which then explain the differences in memory.
 
-* Sarah Creel paper
-
-As noted above, much of the research at this point still very much focuses on higher level relationships, which is progressively being improved upon by agreeing on how to measure music.
-Though until more concrete theories emerge that link specific musical traits to music ability, music psychology will still suffer from less exact models. CITE SELF.
+As noted above, much of the research at this point still very much focuses on higher level relationships, which is progressively being improved upon by agreeing on how to measure what is actually driving these effects.
+Until more concrete theories emerge that link specific musical traits to music ability, music psychology will not be able to put forward clearer models of causal effects [@bakerExaminingMusicalSophistication2018].
 
 ### Relationship Established
 
-Regardless of the direction of causality, there is evidence to suggest that there is a relationship between musical training and cognitive ability.
+Regardless of the direction of causality, the evidence discussed suggests that there is a relationship between musical training and cognitive ability.
 Clearly cognitive ability is at play in many task of perception and production and presumably these abilities would interact with other variables of interest such as musical training.
 Even in studies outside of music, domain general cognitive abilities have been shown to be predictive above and beyond domain specific expertise.
 In reviewing the current literature, [@hambrickDomainGeneralModelsExpertise2019] reiterate that while there is evidence some of the time in many domain specific areas like chess, games, and music, the current state of the literature is not definitive enough to explain exactly how this phenomena works on a global level.
@@ -110,49 +111,55 @@ In multiple studies, Andrea Halpern has also shown measures of working memory to
 Other work by [@harrisonModellingMelodicDiscrimination2016] has also made important links to an individual's ability to rembember and recall musical informaiton and working memory.
 Harrision and colleagues put forward a cognitive model based on research in working memory that predicted which features of a melody-- based on theoretical considerations from working memory-- would be best at predicting behavioral performance.
 They proposed that perceptual encoding, memory retention, similarity comparision, and decision-making could be used to contextualize differences in their memory recogniton paradigm.
-While they did fid evidence to support these notions, they did not take any domain general measures of working memory capacity.
+While they did fid evidence to support these notions, they did not take any domain general measures of working memory capacity and thus were unable to conclude if domain general processes were able to better explain their data than using individual level predictors. 
 
-Additionally, [@okadaIndividualDifferencesMusical2018a] used a a latent variable approach where they investigated executive function in a sample of 161.
+Additionally, [@okadaIndividualDifferencesMusical2018a] used a latent variable approach where they investigated executive function in a sample of 161 university students.
 Using Miyake's conception of executive function and mixed effects modeling, Okada and Slevc found an effect of musical training as measures withe Goldsmiths Musical Sophistication Index on the updating component of the executive functioning model, a construct often interpreted as similar to working memory capacity.
 Okada and Slevc did not however link performance on their executive functioning tasks to an objective measure of musical performance implemented by the Goldsmiths Musical Sophistication Index.
 
+### Dictation Without Dictation
+
 So given the complex network of variables at play, in order to understand how these individual factors affect the first two steps of melodic dictation, a multivariate approach is needed.
-In order to investigate the effects of individual factors on baseline, need to first assume that m4m can stand in for first two steps of melodic dictation.
-Then by investigating how these factors relate using structural equation modeling, we will be able to see what, if any factors, contribute to the first tow steps here.
+In order to investigate the effects of individual factors on baseline, I must first assume that using a meldodic discrimination  paradigm can be used as a proxy for the first two steps of the Karpinski model of melodic dictation.
+I argue that because melodic discrimination paradigms require perceptual encoding, memory retention, and two other cognitive manipulations of similarity comparison and decision making as argued by @harrisonModellingMelodicDiscrimination2016, this paradigms do in fact resemble the first two steps of the Karpinski model.
+Karpinski's hearing and short-term musical memory could just as easily be described as perceptual encoding and memory retention.
+Additionally, the requirement to execute a decision while representing musical informaiton in memory-- Harrison and colleague's Similarity Comparison and Descion making-- can be mapped on to later stages of Karpinski's model of musical understanding, and subsequently notation.
+
+One of the most complete suites of measuring musicality that employs both objective and subjective measures of musical sophistication is the Goldsmiths Musical Sophisticaiton Index or Gold-MSI [@mullensiefenMusicalityNonMusiciansIndex2014].
+The Gold-MSI has both a self report questionaire as well as two test of objective ability.
+One of the tests employs a beat detection paradigm, the other is a melodic discrimination paradigm.
+Seeing as both measures mirror tasks used in the aural skills classroom and the two are purported to measure different constructs, both will be used in this study.
+Since its initial publicaiton, adaptive short forms of the tests have been developed using item response theory [@harrisonApplyingModernPsychometric2017a].
+These tests were not availible to be used at the time of this study's data collection. 
+
+Assuming that a melodic discrimination task can then stand in for this, I can then model the relationships between performance on this musical memory task with individual level variables using structural equation modeling.
+By doing this I can examine the extent to which, if any, factors contribute to the first two steps of melodic dictation.
     
-### Dictation without Dictation
+### Cognitive Measures of Interest
 
-One of the most popular paradigms used in music perception research, specifically the memory for melody literature, are same-different memory tasks [@halpernMemoryMelodies2010].
-These tasks require individuals to hear a melody, retain it in memory, then hear a second melody either at the exact same pitch level, or transposed, and then make a judgment if the two melodies were the same or different.
-It is important to note this type of task requires both retention of musical material and a secondary cognitive task: deciding if the melodies were identical or not.
-In many ways, this type of task mirrors the first two steps of melodic dictation.
-Same-different paradigms require individuals to first hear a finite amount of musical material, then while held in conscious representation, perform some sort of mental action on the contents of memory by making a similarity judgment.
-If one were to acknowledge these similarities in mental processes, using same-different paradigms could provide a way to investigate the first two steps of Karpinski's model of melodic dictation in the general population which may or may not have musical training.
+Having previously established that many tests of musical ability and aptitude may in fact be tests of working memory [@berzWorkingMemoryMusic1995], one factor not yet accounted for in the memory for melodies literature is a domain general measure of working memory.
+If working memory is conceptualized using Cowan's model of working memory as the window of attention [@cowanMagicalMysteryFour2010], measuring working memory would need to be operationalized using a task that implements both the retention and manipulation of information in memory.
+This is commonly done with complex span tasks [@unsworthAutomatedVersionOperation2005].
+Complex span tasks, unlike simple span tasks like the n-back paradigms, require both the retention and manipulation of items in memory and thus better reflect a Cowanian model of working memory [@cowanWorkingMemoryCapacity2005]. 
 
-### Cognitive Measures of interest
+Additionally, since general intelligence is often predictive of performance on a host of cognitive tasks such as educational sucess, income, and even life expectancy [@ritchieIntelligenceAllThat2015] and has been theoretically related to working memory [@kovacsProcessOverlapTheory2016], this measure should also be accounted for when investigating individual features that contribute to the first two steps of melodic dictation using a standard paradigms of intelligence testing [@ravenManualRavenProgressive1994; @thurstonePrimaryMentalAbilities1938].
+Finally, in response to claims made by [@okadaIndividualDifferencesMusical2018a] having to need to account for specific covariates, this study also will track socioeconomic status and degree of education, variables used in previous music psychology research [@corrigallMusicTrainingCognition2013; @swaminathanRevisitingAssociationMusic2017]
 
-Having previously established that many tests of musical ability and aptitude, may in fact be tests of working memory [@berzWorkingMemoryMusic1995], one factor not yet accounted for in many of the measures of musical memory might be working memory.
-If operationalized as conceptualized as Cowan above [@cowanMagicalMysteryFour2010], one would have to measure working memory using a task that uses both retention and manipulation of information in memory, or a set of complex span tasks [@unsworthAutomatedVersionOperation2005].
-Additionally, since general intelligence is often predictive of performance on a host of cognitive tasks LIST and has been theoretically related to working memory [@kovacsProcessOverlapTheory2016], this measure should also be accounted for.
-Finally, in response to claims made by [@okadaIndividualDifferencesMusical2018a] having to need to account for specific covariates, it would also be good to keep track of things like socioeconomic status, degree of education, and OTHER VARIABLES.
+### Structural Equation Modeling
 
-### PATH Analysis here
-
-Given the complex nature being investigated and the theoretical concepts at play such as working memory, general fluid intelligence, and musical sophistication conceptualized as a latent variable, it follows that the most appropriate method of parsing out the variance in this covariance structure would be to use some form of path analysis.
-Path analysis is a type of analysis developed by XXXX which originally assumed a closed algebraic system which could be used to parse out causal structures among covariance relationships WHY.
-The sets of variables presented do not make up a closed system as originally devised by XXX in his investigation of the heritable of Guiana pig traits PEARL PAGE, path analysis using structural equation modeling does allow insight into the degree that variables of interest contribute to complex causal relationships.
+Given the complex nature being investigated and the theoretical concepts at play such as working memory, general fluid intelligence, and musical sophistication conceptualized as a latent variable, it follows that the most appropriate method of parsing out the variance in this covariance structure would be to use some form of structrual equation modeling [@beaujeanLatentVariableModeling2014].
+Structural equation modeling uses latent variables, theoretical constructs thought to exist yet are not possible to measure directly, that using a closed set of algerberic systems origninally developed by Sewall Wright [@wrightMethodPathCoefficents1934].
+When used under the right conditions, the technique is powerful enough to determine casual mechanisms in closed systems [@pearlBookWhyNew2018], but this is not the case in this analysis. 
 
 ### Hypotheses
 
-If I then assume that a same-different melodic memory paradigm is a stable proxy for the first two steps of Karpinski's model of melodic dictation, then data generated from both objective tests of the Goldsmiths' Musical Sophistication Index  can serve as proxy for this measure of interest.
+If I then assume that a same-different melodic memory paradigm is a stable proxy for the first two steps of Karpinski's model of melodic dictation, then data generated from both objective tests of the Goldsmiths' Musical Sophistication Index can serve as proxy for this measure of interest.
 In this analyses, I will use a series of structural equation models in order to investigate how various individual factors contribute to an individual's memory for melody.
-Following a step wise procedure LIKE EE, these sets of analyses will provide a way what individual factors need to be accounted for in future research. 
+Following a step wise procedure, these sets of analyses will provide a way to investigate what individual factors need to be accounted for in future research. 
 
 Given a robust instrument for measuring musicality, and two well established cognitive measures as specifically defined, this study analysis seeks to investigate the degree to which these individual level variables are predictive of a task that is proxy to the first two steps of melodic dictation.
-
 If a large proportion of the variance of musical memory can be attributed to training, then variables related to the Goldsmiths Musical Sophistication Index should be most predictive with the highest path coefficients and lead to the best model fit.
 If instead cognitive factors do play a role, this should be evident in the path loadings.
-Not an either or, more like a both. 
 
 ## Overview of Experiment
 
